Added ui folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 # C extensions
 *.so
 
+# TODO: Change this line
+ots_plugin_template/ui/
+
 # Distribution / packaging
 .Python
 build/
