Updates from OTS-AISStream-Plugin and OTS-SkyFi-Plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ots-plugin-template"
+name = "ots-plugin-template" # TODO: The name must start with OTS-
 description = "Plugin template for OpenTAKServer plugins"
 authors = [{name = "OpenTAKServer", email = "opentakserver@gmail.com"}]
 readme = "README.md"
@@ -9,15 +9,14 @@ documentation = "https://docs.opentakserver.io"
 dynamic = ["entry-points", "version"]
 
 [tool.poetry]
-packages = [{include = "*", from = "ots_plugin_template"}]
-# Remove the following line if your plugin doesn't have a UI. If it does have a UI, make sure to run "npm run build" before "poetry build"
+# TODO: Remove the following line if your plugin doesn't have a UI. If it does have a UI, make sure to run "npm run build" in your UI repo before "poetry build"
 include = [{path = "ots_plugin_template/ui/**/*", format = ["sdist", "wheel"]}]
 version = "0.0.0"
 
 [tool.poetry.dependencies]
-opentakserver = "*"  # TODO: Change this to >= 1.5.0 after its release
+opentakserver = ">=1.5.0"
 python = ">=3.10, <4.0"
-# Add dependencies here
+# TODO: Add dependencies here
 
 # This poetry plugin will automatically set your plugin's version based on git tags. Please use semantic versioning https://semver.org/
 [tool.poetry-dynamic-versioning]
@@ -27,7 +26,7 @@ style = "semver"
 dirty = false
 pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
 
-[tool.poetry-dynamic-versioning.files."ots_plugin_template/__init__.py"] # Change the folder name in this line
+[tool.poetry-dynamic-versioning.files."ots_plugin_template/__init__.py"] # TODO: Change the folder name in this line
 persistent-substitution = true
 initial-content = """
   # These version placeholders will be replaced later during substitution.
@@ -40,4 +39,4 @@ requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0", "se
 build-backend = "poetry_dynamic_versioning.backend"
 
 [project.entry-points.'opentakserver.plugin']
-ots_plugin_template = 'ots_plugin_template.app:PluginTemplate' # <----- Change this to your plugin's name
+ots_plugin_template = 'ots_plugin_template.app:PluginTemplate' # TODO: Change this to your plugin's name
